# bibliotheque-dit

./: .env  .env.example  .gitattributes  .gitignore  Caddyfile  Jenkinsfile  README.md  docker-compose.yml  dvc.yaml  git_workflow.sh  install-hooks.sh  params.yaml  requirements.txt
emprunts/: .env  .env.example  .env.prod  .gitignore  README.md  compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt  seed.py
emprunts/emprunts_service/: settings.py  urls.py
emprunts/loans/: models.py
emprunts/loans/adapters/dal/: 0001_initial.py
emprunts/loans/adapters/dal/repositories/: book_repository.py  loan_repository.py
emprunts/loans/adapters/http/: serializers.py  urls.py  views.py
emprunts/loans/adapters/scalar/: get_filter_parameters.py  scalar.py
emprunts/loans/app/domain/: loan.py  reader.py
emprunts/loans/app/handlers/: borrow_a_book.py
emprunts/loans/app/ports/: book_repository.py  loan_repository.py
emprunts/loans/migrations/: 0001_initial.py
emprunts/scripts/: init-db.sh
emprunts/src/drf/: settings.py  wsgi.py
emprunts/src/loans/adapters/http/: serializers.py  urls.py  views.py
emprunts/src/loans/adapters/middlewares/: jwt_auth.py
emprunts/src/loans/adapters/scalar/: get_filter_parameters.py
emprunts/src/loans/adapters/services/: book.py  brevo_email_service.py
emprunts/src/loans/app/domain/: book.py  email.py  loan.py  reader.py
emprunts/src/loans/app/handlers/: borrow_a_book.py  notify_users_before_loan_due.py  rate_book.py  return_loan.py
emprunts/src/loans/app/ports/: book_service_interface.py  (+1 more)
(+212 files in other folders)
