[project]
name = "emprunts"
version = "0.1.0"
description = "A microservice for managing book loans in a library system."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==4.2.7",
    "django-cors-headers==4.3.1",
    "django-filter>=25.1",
    "djangorestframework==3.14.0",
    "drf-spectacular==0.27.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.12.1",
    "python-decouple==3.8",
    "requests==2.31.0",
]
